--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<html> <body> <script type="text/javascript" src="commons.js"></script><script type="text/javascript" src="main.js"></script></body> </html>
+<html> <body> <script type="text/javascript" src="vendors~main.js"></script><script type="text/javascript" src="main.js"></script></body> </html>
