--- a/async/index.html
+++ b/async/index.html
@@ -1,1 +1,1 @@
-<html> <body> <script type="text/javascript" src="../vendors~main.js"></script><script type="text/javascript" src="../main.js"></script></body> </html>
+<html> <body> <script type="text/javascript" src="/lerna-webpack-example/vendors~main.js"></script><script type="text/javascript" src="/lerna-webpack-example/main.js"></script></body> </html>
