--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<html> <head> </head> <body> <div id=react-root style=height:100%;margin:0></div> asdasdas <script type="text/javascript" src="/lerna-webpack-example/vendors~main.js"></script><script type="text/javascript" src="/lerna-webpack-example/main.js"></script></body> </html>
+<html> <head> </head> <body> <div id=react-root style=height:100%;margin:0></div> <script type="text/javascript" src="/lerna-webpack-example/vendors~main.js"></script><script type="text/javascript" src="/lerna-webpack-example/main.js"></script></body> </html>
